Add a mute button

--- a/mods/tuxemon/l18n/en_US/LC_MESSAGES/base.po
+++ b/mods/tuxemon/l18n/en_US/LC_MESSAGES/base.po
@@ -3035,6 +3035,9 @@ msgstr "Enable"
 msgid "disable"
 msgstr "Disable"
 
+msgid "menu_mute_music"
+msgstr "Mute Music"
+
 msgid "menu_music_volume"
 msgstr "Music Volume"
 
